@@ -138,3 +138,5 @@ GGobi_getCurrentDisplayIndex
 GGobi_getExtendedDisplayTypes
 
 GGobi_raiseWindow
+
+datad_record_ids_set
