@@ -28,7 +28,7 @@ find_nearest_point (icoords *lcursor_pos, splotd *splot, datad *d, ggobid *gg)
   near = 20*20;  /* If nothing is close, don't show any label */
 
   for (i=0; i<d->nrows_in_plot; i++) {
-    if (!d->hidden_now.els[ k=d->rows_in_plot.els[i] ]) {
+    if (!d->hidden_now.els[ k = d->rows_in_plot.els[i] ]) {
       xdist = splot->screen[k].x - lcursor_pos->x;
       ydist = splot->screen[k].y - lcursor_pos->y;
       sqdist = xdist*xdist + ydist*ydist;
